2008-07-29  Claudio Saavedra  <csaavedra@igalia.com>

	* src/Makefile.am: Added HildonDateButton.
	* src/hildon-date-button.c: Update includes.
	* src/hildon.h: Add hildon-date-button.h

	Copied HildonDateButton from sandbox to trunk. Future work on this
	widget must take place in trunk.

2008-07-29  Claudio Saavedra  <csaavedra@igalia.com>

	* src/Makefile.am: Added HildonPickerButton.
	* src/hildon-picker-button.h: Update includes.
	* src/hildon.h: Add hildon-picker-button.h

	Copied HildonPickerButton from sandbox to trunk. Future work on
	this widget must take place in trunk.

2008-07-29  Claudio Saavedra  <csaavedra@igalia.com>

	* src/Makefile.am: Added HildonPickerDialog.
	* src/hildon-picker-dialog.c: Update includes.
	* src/hildon.h: Add hildon-picker-dialog.h

	Copied HildonPickerDialog from sandbox to trunk. Future work
	on this widget must take place in trunk.

2008-07-29  Claudio Saavedra  <csaavedra@igalia.com>

	* src/Makefile.am: Added HildonTimeSelector.
	* src/hildon.h: Add hildon-time-selector.h

	Copied HildonTimeSelector widget from sandbox to trunk. Future
	work on this widget must happen in trunk.

2008-07-29  Claudio Saavedra  <csaavedra@igalia.com>

	* src/Makefile.am: Added HildonDateSelector.
	* src/hildon.h: Add hildon-date-selector.h

	Copied HildonDateSelector widget from sandbox to trunk.  Future
	work on this widget must happen in trunk.

2008-07-29  Claudio Saavedra  <csaavedra@igalia.com>

	* src/Makefile.am: Added HildonTouchPicker.
	* src/hildon-touch-picker.c: Update includes.
	* src/hildon.h: Add hildon-touch-picker.h

	Copied HildonTouchPicker widget from sandbox to trunk. Future work
	on this widget must happen in trunk.

2008-07-29  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-pannable-area.c:
	(hildon_pannable_area_motion_notify_cb): Fix a typo.

2008-07-29  Alberto Garcia  <agarcia@igalia.com>

	* examples/hildon-app-menu-example.c (main): Let the window
	destroy the menu.
