@@ -60,6 +60,7 @@
 #include                                        "hildon-picker-dialog.h"
 #include                                        "hildon-picker-button.h"
 #include                                        "hildon-date-button.h"
+#include                                        "hildon-time-button.h"
 #include                                        "hildon-volumebar-range.h"
 #include                                        "hildon-volumebar.h"
 #include                                        "hildon-vvolumebar.h"
